--- a/notebooks/prep/400_prep_RQ1_Dataframe.ipynb
+++ b/notebooks/prep/400_prep_RQ1_Dataframe.ipynb
@@ -28,20 +28,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DF1 = Joined1617[['name','Points','club']]\n",
-    "DF2 = Joined1516[['name','Points','club']]\n",
-    "DF3 = Joined1415[['name','Points','club']]\n",
-    "DF4 = Joined1314[['name','Points','club']]\n",
-    "DF5 = Joined1213[['name','Points','club']]"
+    "DF1 = Joined1617[['name','Points','club','Start','Sub']]\n",
+    "DF2 = Joined1516[['name','Points','club','Start','Sub']]\n",
+    "DF3 = Joined1415[['name','Points','club','Start','Sub']]\n",
+    "DF4 = Joined1314[['name','Points','club','Start','Sub']]\n",
+    "DF5 = Joined1213[['name','Points','club','Start','Sub']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -834,7 +834,7 @@
        "[3916 rows x 7 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -866,61 +866,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Adrian          3\n",
-       "M. Sarr         3\n",
-       "J. Rodriguez    3\n",
-       "Rafael          3\n",
-       "Gabriel         3\n",
-       "Felipe          2\n",
-       "Saul            2\n",
-       "A. Turan        2\n",
-       "Raul Garcia     2\n",
-       "A. Traore       2\n",
-       "I. Traore       2\n",
-       "A. Toure        2\n",
-       "Juanfran        2\n",
-       "Danilo          2\n",
-       "M. Dembele      2\n",
-       "S. Taylor       2\n",
-       "M. Lopez        2\n",
-       "J. Williams     2\n",
-       "M. Frey         2\n",
-       "A. King         2\n",
-       "T. Cigerci      2\n",
-       "S. Romero       2\n",
-       "Marcelo         2\n",
-       "B. Traore       2\n",
-       "D. Gomez        2\n",
-       "A. Diallo       2\n",
-       "E. Insua        2\n",
-       "L. Suarez       2\n",
-       "S. Sirigu       2\n",
-       "L. Sane         2\n",
-       "Naldo           2\n",
-       "M. Fofana       2\n",
-       "G. Pezzella     2\n",
-       "Bruno           2\n",
-       "J. McCarthy     2\n",
-       "T. Werner       2\n",
-       "B. Jones        2\n",
-       "A. Ajeti        2\n",
-       "S. Ameobi       2\n",
-       "A. Fernandez    2\n",
-       "Name: name, dtype: int64"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
     "names = df.name.value_counts()\n",
     "names[names > 1]"
@@ -928,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -959,49 +906,128 @@
        "      <th>1415</th>\n",
        "      <th>1314</th>\n",
        "      <th>1213</th>\n",
-       "      <th>Total Points</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1725</th>\n",
-       "      <td>S. Ameobi</td>\n",
-       "      <td>Bolton Wanderers</td>\n",
+       "      <th>273</th>\n",
+       "      <td>A. Plizzari</td>\n",
+       "      <td>Ternana</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>54</td>\n",
-       "      <td>13</td>\n",
-       "      <td>11</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1881</th>\n",
-       "      <td>S. Ameobi</td>\n",
-       "      <td>Notts County</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>4</td>\n",
-       "      <td>49</td>\n",
-       "      <td>30</td>\n",
-       "      <td>53</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           name              club  1617  1516  1415  1314  1213  Total Points\n",
-       "1725  S. Ameobi  Bolton Wanderers     0     0    54    13    11            67\n",
-       "1881  S. Ameobi      Notts County     0     0     4    49    30            53"
+       "            name     club  1617  1516  1415  1314  1213\n",
+       "273  A. Plizzari  Ternana     0     0     0     0     0"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[df[\"name\"].str.contains(\"Ameobi\")]"
+    "df[df[\"name\"].str.contains(\"Plizzari\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = df.loc[(df['1617'] == 0) & (df['1516'] == 0) & (df['1415'] == 0) & (df['1314'] == 0) & (df['1213'] == 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.concat([df, test, test]).drop_duplicates(keep=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>club</th>\n",
+       "      <th>1617</th>\n",
+       "      <th>1516</th>\n",
+       "      <th>1415</th>\n",
+       "      <th>1314</th>\n",
+       "      <th>1213</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [name, club, 1617, 1516, 1415, 1314, 1213]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[(df['1617'] == 0) & (df['1516'] == 0) & (df['1415'] == 0) & (df['1314'] == 0) & (df['1213'] == 0)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3432"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
